# src/controller/interfaces/index.ts
@@ -7,3 +7,14 @@ export interface IHelloController {
 export interface IGoodbyeController {
     getMessage(name?:string): Promise<GoodbyeResponse>;
 }
+
+export interface IUserController {
+    //Read all users from database || get user by id
+    getUsers(id?: string): Promise<any>
+    // Delete user by id
+    deleteUser(id?: string): Promise<any>
+    // Create new user
+    createUser(user: any): Promise<any>
+    // Update user
+    updateUser(user: any, id:string): Promise<any>
+}
